--- a/index.html
+++ b/index.html
@@ -11,4 +11,10 @@ Bawiłem grubo się i w Ameryce (USA)<br>
 Gdzieś pod palmami raj, mówili jedź, bo tam, podobno życie (ooo)<br>
 To był przepiękny czas, życie tętniło w nas pamiętasz miła? (ściga nas, ściga nas)<br>
 Lecz to w Ojczyźnie właśnie nam się przydarzyła</p>
+		<p>Miłość, miłość w Zakopanem<br>
+Polewamy się szampanem<br>
+Rycerzem jestem ja, a ty królową nocy<br>
+Miłość żarzy twoje oczy<br>
+Rozpędzona jak motocykl<br>
+Hej wypijemy syćkie drinki aż do dna<br>
 	</body>
