Add paragraph at index.html

--- a/index.html
+++ b/index.html
@@ -17,4 +17,9 @@ Rycerzem jestem ja, a ty królową nocy<br>
 Miłość żarzy twoje oczy<br>
 Rozpędzona jak motocykl<br>
 Hej wypijemy syćkie drinki aż do dna<br>
+		<p>Cekiny błyszczą twe, uśmiechem kusisz mnie,<br>
+DJ przygrywa (DJ przygrywa)<br>
+Splecione ciała dwa, tak piękni ty i ja, szczęście nadpływa (ooo)<br>
+Choć na parkiecie tłum, tu dzisiaj oprócz nas nikogo nie ma (nie ma nas, nie ma nas)<br>
+Cześć tu Sławomir, a w mych ramionach Magdalena</p>
 	</body>
