--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Sławomir</title>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		<h1>Sławomir-"MIłośc w Zakopanem"</h1>
