--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<h1>Sławomir-"MIłośc w Zakopanem"</h1>
+	<header>
+		<div class="container">
+		<h1>Sławomir-"Miłość w Zakopanem"</h1>
+		</div>
+	</header>
 		<p>Teraz już wszystko wiem<br>
 Bawiłem grubo się i w Ameryce (USA)<br>
 Gdzieś pod palmami raj, mówili jedź, bo tam, podobno życie (ooo)<br>
